# cible

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-plz.yml
crates/cible/: CHANGELOG.md  Cargo.toml
crates/cible-core/: CHANGELOG.md  Cargo.toml
crates/cible-core/src/: lib.rs  warehouse.rs
crates/cible/src/: failures.rs  github.rs  ingest.rs  main.rs  report.rs
src/: lib.rs
