[package]
name = "cible"
description = "cible — name reserved, nothing to see here yet"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
cible-core.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"
